Add net charge-off ratio line overlay

--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -982,6 +982,13 @@
   box-sizing: border-box;
 }
 
+.ratioLineChartOverlay {
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+  z-index: 1;
+}
+
 .ratioLineChart {
   width: 100%;
   height: 100%;
