Update charge-off ratio axis and tooltip

--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -985,7 +985,7 @@
 .ratioLineChartOverlay {
   position: absolute;
   inset: 0;
-  pointer-events: none;
+  pointer-events: auto;
   z-index: 1;
 }
 
