--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -9,9 +9,20 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: flex-start;
   gap: 2rem;
   margin-bottom: 2rem;
+}
+
+.headerContent {
+  max-width: 760px;
+}
+
+.headerActions {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  min-width: 180px;
 }
 
 .kicker {
