--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -1142,6 +1142,16 @@
   white-space: nowrap;
 }
 
+.lineChartXAxis {
+  display: block;
+  text-align: center;
+  font-size: 0.65rem;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: #94a3b8;
+  margin-top: -0.2rem;
+}
+
 .profitabilityChartLabels {
   font-size: 0.55rem;
 }
