Ensure capital axis labels show CallYM

--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -1313,13 +1313,16 @@
   font-size: 0.5rem;
 }
 
+.capitalChartLabels span {
+  transform: none;
+  white-space: normal;
+}
+
 .capitalAxisLabel {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0.15rem;
-  transform: none;
-  white-space: normal;
 }
 
 .capitalAxisLabel span {
